# code_with_c

./: .gitignore  AGENTS.md  CMakeLists.txt  DOCS.md  Makefile  READEME.txt  README.md  build_all.sh  comp_stresspi.sh  comp_stresspi_v2.sh  hi  hi.c  libs.txt  pi_lib.cpp  run.sh  run_progress.sh  run_test.sh  run_v2.sh  stress_pi  stress_pi.cpp  stress_pi_progress.cpp  stress_pi_test.cpp  stress_pi_v2  stress_pi_v2.cpp
src/: build_all.sh  pi_lib.h  run.sh  run_progress.sh  run_test.sh  run_v2.sh  stress_pi.cpp  stress_pi_v2.cpp  tui.cpp
